set container width 85% for padding by default (fixes takeaway width on mobile)

--- a/skeleton/css/skeleton.css
+++ b/skeleton/css/skeleton.css
@@ -30,10 +30,10 @@
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .container {
   position: relative;
-  width: 100%;
+  width: 85%;
   max-width: 960px;
   margin: 0 auto;
-  padding: 0 20px;
+  padding: 0;
   box-sizing: border-box;
 }
 
@@ -42,14 +42,6 @@
   width: 100%;
   float: left;
   box-sizing: border-box;
-}
-
-/* For devices larger than 400px */
-@media (min-width: 400px) {
-  .container {
-    width: 85%;
-    padding: 0;
-  }
 }
 
 /* For devices larger than 550px */
